--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-player": "^0.25.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14",
+    "react-scripts": "^1.1.4",
     "react-share": "^1.17.0",
     "redux": "^3.7.2",
     "redux-form": "^6.6.3",
